test/end-to-end/compile-errors/function-pointer-not-bare.crow
main void()
	f void function() = &foo
	f[]

in-js void() js extern
	f void function() = &foo
	f[]

foo void()
	info log "in foo"
